Iniciando a estrutura de NF
